# wishr

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  ci-check.sh  docker-compose.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci-cd.yml
migrations/: 001_init.sql  002_add_lists.sql
src/: app.rs  lib.rs  main.rs  models.rs
src/components/: archive.rs  list_archive.rs  lists_home.rs  mod.rs  wish_form.rs  wish_list.rs
src/server/: db.rs  items.rs  mod.rs
style/: main.scss
